# samples

./: .clang-format  .gitignore  .gitmodules  Makefile  config.cmake  make.sh  makefile.mk  memotags  tags.memo
app_cmd/: CMakeLists.txt  Makefile  main.cpp
app_imgui/: CMakeLists.txt  Makefile  main.cpp  myglapp.cpp  myglapp.h
bat/: sample.bat
blender/: bsdf_samples.py  render.py
blender/addons/: human_texture_panel.py
bpy/: render.py
cmake/: CMakeLists.txt  Makefile  main.cpp  sample_cmake.cpp
cmake/all/: Makefile
cmake/app/: CMakeLists.txt  Makefile  version.h
cmake/app/tools/: make_ver.bat
cmake/min/: CMakeLists.txt  Makefile
cmake/tools/: make_ver.bat
cpp/: CMakeLists.txt  Makefile  compile_flags.txt  make.sh  sample.cpp  sample_array.cpp  sample_c++11.cpp  sample_c++14.cpp  sample_c++17.cpp  sample_c++20.cpp  sample_cereal.cpp  sample_chrono.cpp  sample_class.cpp  sample_cmdline.cpp  sample_cstdio.cpp  sample_fstream.cpp  sample_glm.cpp  sample_hello_world.cpp  sample_image.cpp  sample_move.cpp  sample_spdlog.cpp  sample_stl.cpp  sample_stream.cpp  sample_string.cpp  sample_syntax.cpp  sample_template.cpp  sample_thread.cpp  sample_util.cpp
cpp/app_cmd/: main.cpp
cpp/cpp_lib/: CMakeLists.txt  Makefile  sample_cereal.cpp  sample_cmdline.cpp  sample_eigen.cpp  sample_glm.cpp  sample_json11.cpp  sample_opencv.cpp  sample_spdlog.cpp  util_vec.h
cpp/gl/: CMakeLists.txt
cpp/gl/common/: myglut.h
cpp/gl/gl3d/: main.cxx
cpp/gl/glsl/: frag.glsl  vert.glsl
cpp/opencv/: CMakeLists.txt  Makefile  detect_face.cpp
cpp_lib/: CMakeLists.txt  Makefile  sample_cereal.cpp  sample_cmdline.cpp  sample_eigen.cpp  sample_glm.cpp  sample_json11.cpp  sample_mat.cpp  sample_opencv.cpp  sample_spdlog.cpp  sample_stb.cpp
data/: sample.txt  sample1.txt
gl/gl2d/: main.cxx
gl/glsl/: CMakeLists.txt  glsl_util.cxx  glsl_util.h  main.cxx
imgui/: CMakeLists.txt  Makefile  gl_app.cpp  gl_app.h  gl_fbo.cpp  gl_fbo.h  gl_frame.cpp  gl_frame.h  image_util.cpp  image_util.h  imgui_console.h  main.cpp  myglapp.cpp  myglapp.h  sample_imgui.cpp
make/: Makefile
mycmake/: CMakeLists.txt  Makefile  a.cpp  a.h  b.cpp  b.h  main.cpp
mycmake.base/: CMakeLists.txt  Makefile
mycmake.test/: CMakeLists.txt  Makefile  main.cpp  version.h
nvim/: nvim_popup.lua  nvim_popup.vim
opencv/: CMakeLists.txt  Makefile  detect_face.cpp  display_image.cpp
opencv/deploy/: mkdeploy.sh  run.bat
py/: Makefile  a.py  cat.py  common.py  create_image.py  cv_canny.py  cv_contour.py  cv_face_detect.py  cv_hist.py  cv_image.py  image_tool.py  imgcat.py  main.py  make.sh  my.py  print_versions.py  sample_PIL.py  sample_argparse.py  sample_class.py  sample_cmd.py  sample_cv2.py  sample_dict.py  sample_hashlib.py  sample_io_json.py  sample_io_text.py  sample_io_text2.py  sample_json.py  sample_kivy.py  sample_lib_argparse.py  sample_lib_kivy.py  sample_list.py  sample_matplotlib.py  sample_numpy.py  sample_old.py  sample_os.py  sample_os_file.py  sample_os_path.py  sample_plot.py  sample_skimage.py  sample_string.py  (+11 more)
py/argparse/: argparse_detail.py  argparse_simple.py
py/capi/: Makefile  py_hello.c  setup.py
py/concurrent/: thread_pool.py
py/cv/: cv_contour.py  cv_face_detect.py  cv_image.py
py/datetime/: sample_datetime.py
py/dict/: dict_cat.py  sample_dict.py
py/futures/: proc_pool.py
py/hashlib/: sample_hashlib.py
py/json/: sample_io_json.py  sample_str_json.py
py/kivy/: sample_lib_kivy.py
py/lib/: common.py  mycvmod.py  util.py
py/list/: sample_list.py
py/map/: map.py  map2.py
py/matplotlib/: sample_lib_matplotlib.py
py/module/: mod_a.py  mod_b.py  sample_module.py
py/modules/: mymodule.py
py/numpy/: depth2normal.py  sample_numpy.py  ufunc.py
py/obsolete/: sample_old.py
py/os/: sample_os.py  sample_os_file.py  sample_os_file2.py  sample_os_path.py  sample_sys.py
py/parse/: sample_parse.py
py/pil/: pil_image.py  test_image.py
py/re/: sample_re.py
py/run/: run.py
py/sample_module/: mymodule.py  sample_module.py
py/skimage/: sample_lib_skimage.py
py/string/: a.py  b.py  replace_token.py  sample_string.py  sample_string_format.py  sample_string_path.py
py/subprocess/: hello.py  run2.py
py/syntax/: global_var.py  sample_class.py  sample_syntax.py
py/sys/: sample_sys.py
py/test/: Makefile  make.sh  test_cv_util.py  test_filename.py  test_fname.py  test_image.py  test_image.sh  test_image_create.sh  test_path.py  test_pathlib.py  test_plot.py  test_realpath.py  test_tt_util.py  test_ttp.py
py/test_util/: test_image.py  test_image.sh
py/tkinter/: app.py  button.py  combo.py  filedialog.py  grid.py  label.py  multi_window.py  sample_tkinter.py  text.py  ttkthemes.py
py/tools/: conv.py  cv_resize.py  image.py  test_image.py  test_image.sh
py/zip/: a.py
py_lib/cv/: Makefile  cv_contour.py  cv_face_detect.py  cv_image.py  make_hist_exr.py
py_lib/matplotlib/: illum.json  make.sh  plot_bar.py  plot_data.py  plot_data_illum.py  plot_graph.py  plot_image.py  sample_lib_matplotlib.py
py_lib/numpy/: sample_numpy.py  sample_numpy_max.py  ufunc.py  ufunc_2d.py
py_lib/tkinter/: color.py  entry.py  filedialog.py  font.py  image.py  menu.py  mouse_event.py  resize_canvas.py  simple.py
pytorch/: arff2png.py  check-cuda.py  check_cuda.py  check_model.py  mnist.py  sample_pytorch.py  test_mnist.py
pytorch/mnist/: Makefile  arff2png.py  cuda.py  mnist.model  mnist_image_test.py  mnist_test.arff  mnist_test.py  mnist_train.py
pytorch/mnist_arff/: check_model.py  mnist.model  mnist_test.py  mnist_train.py
pytorch/mnist_image/: a.py  mnist_image_test.py
sh/: sample_app.sh  sample_args.sh  sample_syntax.sh
tensorflow/: fashion-mnist.py
test_bin/: make.sh
util/: array.h  array_util.h  filename.cxx  filename.h  image.h  log.h  path.cxx  path.h  stat.h  time.h  type.h  util.h
vim/: args.vim  autocmd.vim  balloon.vim  command.vim  common_popup_menu.vim  job.vim  my_test.vim  nerdfont.vim  popup.vim  popup_create.vim  popup_dialog.vim  popup_menu.vim  popup_shell.vim  popup_term.vim  preview.vim  syntax.vim  vim_popup_shell.vim
(+23 files in other folders)
